packages/next-swc/crates/core/tests/errors/next-font-loaders/not-const/output.js
import inter1 from '@next/font/google/target.css?{"arguments":[{"variant":"400"}],"import":"Inter","path":"pages/test.tsx","variableName":"inter1"}';
import inter2 from '@next/font/google/target.css?{"arguments":[{"variant":"400"}],"import":"Inter","path":"pages/test.tsx","variableName":"inter2"}';
var i = 10;
var i2 = 20;
